--- a/Pharmacy/App.config
+++ b/Pharmacy/App.config
@@ -1,6 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Pharmacy.Properties.Settings.PharmacyConnectionString"
+            connectionString="Data Source=LAPTOP-I5KR571R\DUY;Initial Catalog=Pharmacy;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;Application Intent=ReadWrite"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
 </configuration>
