--- a/Pharmacy/Pharmacy.csproj
+++ b/Pharmacy/Pharmacy.csproj
@@ -157,6 +157,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserInfo.Designer.cs">
+      <DependentUpon>UserInfo.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AddHDB.resx">
       <DependentUpon>AddHDB.cs</DependentUpon>
     </EmbeddedResource>
@@ -206,6 +212,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UserInfo.resx">
+      <DependentUpon>UserInfo.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="PharmacyDataSet.xsc">
       <DependentUpon>PharmacyDataSet.xsd</DependentUpon>
