--- a/Pharmacy/Pharmacy.csproj
+++ b/Pharmacy/Pharmacy.csproj
@@ -150,6 +150,12 @@
     <Compile Include="frmSupplier.Designer.cs">
       <DependentUpon>frmSupplier.cs</DependentUpon>
     </Compile>
+    <Compile Include="HDNhap.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HDNhap.Designer.cs">
+      <DependentUpon>HDNhap.cs</DependentUpon>
+    </Compile>
     <Compile Include="PharmacyDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -201,6 +207,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmSupplier.resx">
       <DependentUpon>frmSupplier.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HDNhap.resx">
+      <DependentUpon>HDNhap.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
