--- a/Pharmacy/Pharmacy.csproj
+++ b/Pharmacy/Pharmacy.csproj
@@ -150,11 +150,23 @@
     <Compile Include="frmSupplier.Designer.cs">
       <DependentUpon>frmSupplier.cs</DependentUpon>
     </Compile>
-    <Compile Include="HDNhap.cs">
+    <Compile Include="frmHDBan.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="HDNhap.Designer.cs">
-      <DependentUpon>HDNhap.cs</DependentUpon>
+    <Compile Include="frmHDBan.Designer.cs">
+      <DependentUpon>frmHDBan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmHDNhap.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmHDNhap.Designer.cs">
+      <DependentUpon>frmHDNhap.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmxuatthuoc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmxuatthuoc.Designer.cs">
+      <DependentUpon>frmxuatthuoc.cs</DependentUpon>
     </Compile>
     <Compile Include="PharmacyDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -199,6 +211,9 @@
     <EmbeddedResource Include="frmEmployee.resx">
       <DependentUpon>frmEmployee.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmHDBan.resx">
+      <DependentUpon>frmHDBan.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMedicine.resx">
       <DependentUpon>frmMedicine.cs</DependentUpon>
     </EmbeddedResource>
@@ -208,8 +223,8 @@
     <EmbeddedResource Include="frmSupplier.resx">
       <DependentUpon>frmSupplier.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="HDNhap.resx">
-      <DependentUpon>HDNhap.cs</DependentUpon>
+    <EmbeddedResource Include="frmHDNhap.resx">
+      <DependentUpon>frmHDNhap.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
