--- a/Pharmacy/App.config
+++ b/Pharmacy/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="Pharmacy.Properties.Settings.PharmacyConnectionString"
-            connectionString="Data Source=192.168.1.121;Initial Catalog=Pharmacy;Integrated Security=True;Encrypt=True;User id=sa;Password = 1234;Application Intent=ReadWrite"
+            connectionString="Data Source=192.168.1.121;Initial Catalog=Pharmacy;Encrypt=True;User id=sa;Password = 1234;Application Intent=ReadWrite"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
