Login based roles

--- a/Pharmacy/App.config
+++ b/Pharmacy/App.config
@@ -6,6 +6,9 @@
         <add name="Pharmacy.Properties.Settings.PharmacyConnectionString"
             connectionString="Data Source=LAPTOP-I5KR571R\DUY;Initial Catalog=Pharmacy;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;Application Intent=ReadWrite"
             providerName="System.Data.SqlClient" />
+        <add name="Pharmacy.Properties.Settings.PharmacyConnectionString1"
+            connectionString="Data Source=DESKTOP-2URP72G\SQLEXPRESS;Initial Catalog=Pharmacy;Integrated Security=True;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
