--- a/Pharmacy/Pharmacy.csproj
+++ b/Pharmacy/Pharmacy.csproj
@@ -168,10 +168,26 @@
     <Compile Include="frmxuatthuoc.Designer.cs">
       <DependentUpon>frmxuatthuoc.cs</DependentUpon>
     </Compile>
+    <Compile Include="loginscreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="loginscreen.Designer.cs">
+      <DependentUpon>loginscreen.cs</DependentUpon>
+    </Compile>
     <Compile Include="PharmacyDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>PharmacyDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="PharmacyDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PharmacyDataSet1.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="PharmacyDataSet2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PharmacyDataSet2.xsd</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -229,6 +245,9 @@
     <EmbeddedResource Include="frmxuatthuoc.resx">
       <DependentUpon>frmxuatthuoc.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="loginscreen.resx">
+      <DependentUpon>loginscreen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -253,6 +272,28 @@
     </None>
     <None Include="PharmacyDataSet.xss">
       <DependentUpon>PharmacyDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="PharmacyDataSet1.xsc">
+      <DependentUpon>PharmacyDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="PharmacyDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>PharmacyDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="PharmacyDataSet1.xss">
+      <DependentUpon>PharmacyDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="PharmacyDataSet2.xsc">
+      <DependentUpon>PharmacyDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="PharmacyDataSet2.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>PharmacyDataSet2.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="PharmacyDataSet2.xss">
+      <DependentUpon>PharmacyDataSet2.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
