--- a/Pharmacy/packages.config
+++ b/Pharmacy/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="BouncyCastle.Cryptography" version="2.4.0" targetFramework="net48" />
   <package id="iTextSharp" version="5.5.13.4" targetFramework="net48" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1652.0" targetFramework="net48" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net48" />
 </packages>
